azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "User name for the Virtual Machine."
            }
        },
        "password": {
            "type": "securestring",
            "metadata": {
              "description": "Password for the Virtual Machine."
            }
          },
        "vmSize": {
            "type": "string",
            "metadata": {
                "description": "Size of the virtual machine to provision"
            },
            "defaultValue": "Standard_D16s_v3"
        },
        "vmName": {
            "type": "string",
            "metadata": {
                "description": "Name of the virtual machine to provision"
            }
        },
        "onapDnsPrefix": {
            "type": "string",
            "metadata": {
                "description": "Unique DNS Name for the Public IP used to access the Jenkins Virtual Machine."
            }
        },
        "onapReleaseType": {
            "type": "string",
            "allowedValues": [
                "master",
                "amsterdam",
                "release-1.0.0"
            ],
            "defaultValue": "amsterdam",
            "metadata": {
                "description": "The OOM release"
            }
        }
    },
    "variables": {
        "resourcePrefix": "onap",
        "OSDiskName": "[concat(variables('resourcePrefix'), 'OSDisk')]",
        "nicName": "[concat(variables('resourcePrefix'), 'VMNic')]",
        "subnetName": "[concat(variables('resourcePrefix'), 'Subnet')]",
        "publicIPAddressName": "[concat(variables('resourcePrefix'), 'PublicIP')]",
        "vmExtensionName": "[concat(variables('resourcePrefix'), 'Init')]",
        "virtualNetworkName": "[concat(variables('resourcePrefix'), 'VNET')]",
        "frontEndNSGName": "[concat(variables('resourcePrefix'), 'NSG')]",
        "vNetAddressPrefixes": "10.0.0.0/16",
        "sNetAddressPrefixes": "10.0.0.0/24",
        "vmPrivateIP": "10.0.0.5",
        "scriptLocation": "https://raw.githubusercontent.com/taranki/onap-azure/master/",
        "extensionScript": "onap_azure_setup.sh"
    },
    "resources": [
        {
            "apiVersion": "2016-09-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('onapDnsPrefix')]"
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('frontEndNSGName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "NSG - Front End"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh-rule",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "rancher-rule",
                        "properties": {
                            "description": "Allow Rancher on port 8880",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8880",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "onap-ports",
                        "properties": {
                            "description": "Allow onap setup config traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "destinationPortRange": "4500,500,8080,8989,10250,30000-31000"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2016-09-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNetAddressPrefixes')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('sNetAddressPrefixes')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('frontEndNSGName'))]"
            ]
        },
        {
            "apiVersion": "2016-09-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('nicName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIpAddress": "[variables('vmPrivateIP')]",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName')),'/subnets/',variables('subnetName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('vmName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[parameters('vmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('password')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "osdisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "diskSizeGB": 1024,
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
                        }
                    ]
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('vmName'),'/onapsetup')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
              "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
            ],
            "properties": {
              "publisher": "Microsoft.Azure.Extensions",
              "type": "CustomScript",
              "typeHandlerVersion": "2.0",
              "autoUpgradeMinorVersion": "true",
              "settings": {
                "fileUris": [
                    "[concat(variables('scriptLocation'), variables('extensionScript'))]"
                ],
                "commandToExecute": "[concat('./' , variables('extensionScript'), ' -f \"', reference(variables('publicIPAddressName')).dnsSettings.fqdn, '\" -i \"', variables('vmPrivateIP'), '\" -r \"', parameters('onapReleaseType'), '\"' )]"
              }
            }
          }
    ],
    "outputs": {
        "onapURL": {
            "type": "string",
            "value": "[concat('http://', reference(variables('publicIPAddressName')).dnsSettings.fqdn)]"
        }
    }
}
